--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ kotlin {
         targetFromPreset(presets.js, 'js')
         targetFromPreset(presets.macosX64, 'macos')
         targetFromPreset(presets.iosX64, 'iosSim')
-        targetFromPreset(presets.iosArm64, 'iosDevice')
+        targetFromPreset(presets.iosArm64, 'iosDevice64')
+        targetFromPreset(presets.iosArm32, 'iosDevice32')
     }
     sourceSets {
         commonMain {
@@ -61,8 +62,10 @@ kotlin {
         }
         macosMain { kotlin.srcDirs += 'src/nativeMain/kotlin' }
         macosTest { kotlin.srcDirs += 'src/nativeTest/kotlin' }
-        iosDeviceMain { kotlin.srcDirs += 'src/nativeMain/kotlin' }
-        iosDeviceTest { kotlin.srcDirs += 'src/nativeTest/kotlin' }
+        iosDevice64Main { kotlin.srcDirs += 'src/nativeMain/kotlin' }
+        iosDevice64Test { kotlin.srcDirs += 'src/nativeTest/kotlin' }
+        iosDevice32Main { kotlin.srcDirs += 'src/nativeMain/kotlin' }
+        iosDevice32Test { kotlin.srcDirs += 'src/nativeTest/kotlin' }
         iosSimMain { kotlin.srcDirs += 'src/nativeMain/kotlin' }
         iosSimTest { kotlin.srcDirs += 'src/nativeTest/kotlin' }
     }
