--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,16 @@
 kotlin.code.style=official
+
+GROUP=com.benasher44
+VERSION=0.0.1-SNAPSHOT
+
+POM_URL=https://github.com/benasher44/uuid/
+POM_SCM_URL=https://github.com/benasher44/uuid/
+POM_SCM_CONNECTION=scm:git:git://github.com/benasher44/uuid.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/benasher44/uuid.git
+POM_LICENCE_NAME=MIT License
+POM_LICENCE_URL=https://github.com/benasher44/uuid/blob/master/LICENSE
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=benasher44
+POM_DEVELOPER_NAME=Ben Asher
+POM_NAME=UUID
+POM_DESCRIPTION=A Kotlin multiplatform implementation of a v4 RFC4122 UUID
