--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     }
     dependencies {
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.30'
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:0.9.17'
     }
 }
 
@@ -12,16 +13,27 @@ repositories {
     jcenter()
     mavenCentral()
 }
-group 'com.benasher44'
-version '0.0.1'
 
 apply plugin: 'kotlin-multiplatform'
-apply plugin: 'maven-publish'
 
 kotlin {
     targets {
-        targetFromPreset(presets.jvm, 'jvm')
-        targetFromPreset(presets.js, 'js')
+        targetFromPreset(presets.jvm, 'jvm') {
+            configure([compilations.main, compilations.test]) {
+                tasks.getByName(compileKotlinTaskName).kotlinOptions {
+                    jvmTarget = '1.8'
+                }
+            }
+        }
+        targetFromPreset(presets.js, 'js') {
+            configure([compilations.main, compilations.test]) {
+                tasks.getByName(compileKotlinTaskName).kotlinOptions {
+                    sourceMap = true
+                    moduleKind = "umd"
+                    metaInfo = true
+                }
+            }
+        }
         targetFromPreset(presets.macosX64, 'macos')
         targetFromPreset(presets.iosX64, 'iosSim')
         targetFromPreset(presets.iosArm64, 'iosDevice64')
@@ -117,3 +129,5 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     main = "com.github.shyiko.ktlint.Main"
     args "-F", "src/**/*.kt"
 }
+
+apply from: 'publish.gradle'
