--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,3 +31,30 @@ steps:
       gradleOptions: '-Xmx3072m'
       tasks: 'build'
     displayName: 'Build'
+
+  - task: Gradle@2
+    inputs:
+      workingDirectory: ''
+      gradleWrapperFile: 'gradlew'
+      gradleOptions: '-Xmx3072m'
+      tasks: 'publishMac'
+    condition: and(eq(variables['Agent.OS'], 'Darwin'), succeeded(), eq(variables['Build.SourceBranch'], 'refs/pull/basher/publish'))
+    displayName: 'Publish Mac Artifacts'
+
+  - task: Gradle@2
+    inputs:
+      workingDirectory: ''
+      gradleWrapperFile: 'gradlew'
+      gradleOptions: '-Xmx3072m'
+      tasks: 'publishLinux'
+    condition: and(eq(variables['Agent.OS'], 'Linux'), succeeded(), eq(variables['Build.SourceBranch'], 'refs/pull/basher/publish'))
+    displayName: 'Publish Linux Artifacts'
+
+  - task: Gradle@2
+    inputs:
+      workingDirectory: ''
+      gradleWrapperFile: 'gradlew'
+      gradleOptions: '-Xmx3072m'
+      tasks: 'publishWindows'
+    condition: and(eq(variables['Agent.OS'], 'Windows_NT'), succeeded(), eq(variables['Build.SourceBranch'], 'refs/pull/basher/publish'))
+    displayName: 'Publish Windows Artifacts'
