--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
     script:
     - powershell -Command "cmd /c travis_win.bat"
     after_success:
-    - powershell -Command "\$env:SONATYPE_USERNAME = '$SONATYPE_USERNAME'; \$env:SONATYPE_PASSWORD = '$SONATYPE_PASSWORD'; cmd /c scripts\\publishWin.bat"
+    - powershell -Command "cmd /c 'set SONATYPE_USERNAME=$SONATYPE_USERNAMEE && set SONATYPE_PASSWORD=$SONATYPE_PASSWORD && scripts\\publishWin.bat'"
   - os: osx
     env: JAVA_OPTS=-Xmx2g
     language: java
