--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ POM_SCM_URL=https://github.com/benasher44/uuid/
 POM_SCM_CONNECTION=scm:git:git://github.com/benasher44/uuid.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/benasher44/uuid.git
 POM_LICENCE_NAME=MIT License
-POM_LICENCE_URL=https://github.com/benasher44/uuid/blob/master/LICENSE
+POM_LICENCE_URL=https://opensource.org/licenses/mit-license
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=benasher44
 POM_DEVELOPER_NAME=Ben Asher
