--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,10 +41,10 @@ steps:
     condition: and(eq(variables['Agent.OS'], 'Darwin'), succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: 'Publish Mac Artifacts'
     env:
-      SONATYPE_USERNAME: $(SONATYPE_USERNAME)
-      SONATYPE_PASSWORD: $(SONATYPE_PASSWORD)
-      SIGNING_KEY: $(SIGNING_KEY)
-      SIGNING_PASSWORD: $(SIGNING_PASSWORD)
+      SONATYPE_USERNAME: "$(SONATYPE_USERNAME)"
+      SONATYPE_PASSWORD: "$(SONATYPE_PASSWORD)"
+      SIGNING_KEY: "$(SIGNING_KEY)"
+      SIGNING_PASSWORD: "$(SIGNING_PASSWORD)"
 
   - task: Gradle@2
     inputs:
@@ -55,10 +55,10 @@ steps:
     condition: and(eq(variables['Agent.OS'], 'Linux'), succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: 'Publish Linux Artifacts'
     env:
-      SONATYPE_USERNAME: $(SONATYPE_USERNAME)
-      SONATYPE_PASSWORD: $(SONATYPE_PASSWORD)
-      SIGNING_KEY: $(SIGNING_KEY)
-      SIGNING_PASSWORD: $(SIGNING_PASSWORD)
+      SONATYPE_USERNAME: "$(SONATYPE_USERNAME)"
+      SONATYPE_PASSWORD: "$(SONATYPE_PASSWORD)"
+      SIGNING_KEY: "$(SIGNING_KEY)"
+      SIGNING_PASSWORD: "$(SIGNING_PASSWORD)"
 
   - task: Gradle@2
     inputs:
@@ -69,10 +69,10 @@ steps:
     condition: and(eq(variables['Agent.OS'], 'Windows_NT'), succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: 'Publish Windows Artifacts'
     env:
-      SONATYPE_USERNAME: $(SONATYPE_USERNAME)
-      SONATYPE_PASSWORD: $(SONATYPE_PASSWORD)
-      SIGNING_KEY: $(SIGNING_KEY)
-      SIGNING_PASSWORD: $(SIGNING_PASSWORD)
+      SONATYPE_USERNAME: "$(SONATYPE_USERNAME)"
+      SONATYPE_PASSWORD: "$(SONATYPE_PASSWORD)"
+      SIGNING_KEY: "$(SIGNING_KEY)"
+      SIGNING_PASSWORD: "$(SIGNING_PASSWORD)"
 
 variables:
   - group: 'Sonatype Credentials'
