--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31'
         classpath 'org.jetbrains.dokka:dokka-gradle-plugin:0.9.18'
     }
+    ext."signing.keyId" = System.getenv("SIGNING_KEYID")
+    ext."signing.password" = System.getenv("SIGNING_PASSWORD")
+    ext."signing.secretKeyRingFile" = System.getenv("SIGNING_KEYRING")
 }
 
 repositories {
