--- a/publish.gradle
+++ b/publish.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'maven-publish'
-apply plugin: 'signing'
-apply plugin: 'org.jetbrains.dokka'
+buildscript {
+    ext."signing.keyId" = System.getenv("SIGNING_KEYID")
+    ext."signing.password" = System.getenv("SIGNING_PASSWORD")
+    ext."signing.secretKeyRingFile" = System.getenv("SIGNING_KEYRING")
+}
 
 group GROUP
 version VERSION
