Changed metadata files
* Added `.java-version` for [jEnv](http://www.jenv.be/) support. I have many JDKs installed because I need them for work, managing this per project is tedious. jEnv solves this problem nicely. Note that we cannot go down to 1.6 because the Gradle version we use requires 1.8.
* Removed Maven Central from repositories, jCenter contains everything from Maven Central and having additional repositories just makes things slow.
* Changed from `executable` and `args` to a direct `commandLine` assignment in the `testIosSim` task; IntelliJ keeps on showing errors otherwise.
* Added Gradle cache to speed things up.
* Added Gradle parallelization to speed things up.
* Added Kotlin incremental compilation to speed things up.
* Added a Changelog to keep track of all changes. It follows the [Keep a Changelog](https://keepachangelog.com/) standard. Notice also how I write here everything in a way that allows copying this stuff easily over to the Changelog. However, only _notable_ changes should be part of a Changelog and nothing I did in this PR affects the user (hence metadata).

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
+org.gradle.caching=true
+org.gradle.parallel=true
+
 kotlin.code.style=official
+kotlin.incremental=true
 
 GROUP=com.benasher44
 VERSION=0.0.3-SNAPSHOT
