--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,11 @@
 trigger:
   branches:
     include:
+      - 'master'
+
+pr:
+  branches:
+    include:
       - '*'
 
 strategy:
@@ -16,13 +21,23 @@ pool:
   vmImage: $(imageName)
 
 steps:
-  - bash: sudo apt install build-essential
+  - bash: sudo apt install build-essential ruby
     condition: eq(variables['Agent.OS'], 'Linux')
     displayName: 'Install build dependencies'
 
   - script: choco install mingw
     condition: eq(variables['Agent.OS'], 'Windows_NT')
     displayName: 'Install build dependencies'
+
+  - task: Bash@3
+    inputs:
+      targetType: inline
+      script: 'sudo gem install bundler && bundle install --path=vendor/bundle && bundle exec danger --fail-on-errors=true'
+      failOnStderr: true
+    condition: eq(variables['Agent.OS'], 'Linux')
+    displayName: 'Perform Danger Checks'
+    env:
+      DANGER_GITHUB_API_TOKEN: "$(DANGER_GITHUB_API_TOKEN)"
 
   - task: Gradle@2
     inputs:
@@ -84,3 +99,4 @@ steps:
 
 variables:
   - group: 'Sonatype Credentials'
+  - group: 'Danger Credentials'
