--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ kotlin.code.style=official
 kotlin.incremental=true
 
 GROUP=com.benasher44
-VERSION=0.0.7
+VERSION=0.0.8-SNAPSHOT
 
 POM_URL=https://github.com/benasher44/uuid/
 POM_SCM_URL=https://github.com/benasher44/uuid/
