--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
   - task: Bash@3
     inputs:
       targetType: inline
-      script: 'sudo gem install bundler && bundle install --path=vendor/bundle && bundle exec danger --fail-on-errors=true'
+      script: 'sudo gem install bundler && bundle install --path=vendor/bundle && bundle exec danger --fail-on-errors=true &> /dev/null'
       failOnStderr: true
     condition: eq(variables['Agent.OS'], 'Darwin')
     displayName: 'Perform Danger Checks'
@@ -43,7 +43,7 @@ steps:
     inputs:
       workingDirectory: ''
       gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
+      options: '--no-daemon'
       tasks: 'build'
     displayName: 'Build'
 
@@ -56,7 +56,6 @@ steps:
     inputs:
       workingDirectory: ''
       gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
       tasks: 'publishMac'
     condition: and(eq(variables['Agent.OS'], 'Darwin'), succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: 'Publish Mac Artifacts'
@@ -71,7 +70,6 @@ steps:
     inputs:
       workingDirectory: ''
       gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
       tasks: 'publishLinux'
     condition: and(eq(variables['Agent.OS'], 'Linux'), succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: 'Publish Linux Artifacts'
@@ -86,7 +84,6 @@ steps:
     inputs:
       workingDirectory: ''
       gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
       tasks: 'publishWindows'
     condition: and(eq(variables['Agent.OS'], 'Windows_NT'), succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     displayName: 'Publish Windows Artifacts'
