--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,7 @@ steps:
     inputs:
       workingDirectory: ''
       gradleWrapperFile: 'gradlew'
+      gradleOptions: '-Xmx4096M'
       tasks: 'build'
     displayName: 'Build'
 
