Only one task compileTestKotlinMacosX64 instead of build. Decrease memory from 8G to 4G

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,8 +43,8 @@ steps:
     inputs:
       workingDirectory: ''
       gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx8192m'
-      tasks: 'build'
+      gradleOptions: '-Xmx4096m'
+      tasks: 'compileTestKotlinMacosX64'
     displayName: 'Build'
 
   - task: DownloadSecureFile@1
