--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,4 +29,4 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Build
-        run: ./gradlew build --stacktrace
+        run: ./gradlew build --no-daemon --stacktrace
