--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -32,4 +32,4 @@ jobs:
         run: ./gradlew build --no-daemon --stacktrace
 
 env:
-  GRADLE_OPTS: -Dorg.gradle.configureondemand=true -Dorg.gradle.parallel=false -Dkotlin.incremental=false -Dorg.gradle.jvmargs="-Xmx3"
+  GRADLE_OPTS: -Dorg.gradle.jvmargs="-Xmx3g"
