--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -52,7 +52,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
-        run: bundle exec danger --fail-on-errors=true &> /dev/null'
+        run: bundle exec danger --fail-on-errors=true &> /dev/null
 
 
       - name: Build
