--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,3 +1,4 @@
+name: pr
 on:
   push:
     branches:
@@ -30,7 +31,7 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Publish Mac Artifacts
-        if: matrix.os == 'mac-latest'
+        if: matrix.os == 'macOS-latest'
         run: ./gradlew publishMac --no-daemon --stacktrace
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
