--- a/publish.gradle
+++ b/publish.gradle
@@ -153,6 +153,13 @@ signing {
     sign(publishing.publications)
 }
 
+
+
+tasks.withType(Sign) {
+    println(it)
+    onlyIf { isReleaseBuild() }
+}
+
 tasks.register('publishMac') {
     dependsOn 'publishIosArm32PublicationToMavenRepository'
     dependsOn 'publishIosArm64PublicationToMavenRepository'
