Only sign release builds (#85)
Fix signing so that it only signs release builds

--- a/publish.gradle
+++ b/publish.gradle
@@ -153,6 +153,12 @@ signing {
     sign(publishing.publications)
 }
 
+
+
+tasks.withType(Sign) {
+    onlyIf { isReleaseBuild() }
+}
+
 tasks.register('publishMac') {
     dependsOn 'publishIosArm32PublicationToMavenRepository'
     dependsOn 'publishIosArm64PublicationToMavenRepository'
