add watchOS and tvOS to publish task

--- a/publish.gradle
+++ b/publish.gradle
@@ -163,6 +163,11 @@ tasks.register('publishMac') {
     dependsOn 'publishIosArm32PublicationToMavenRepository'
     dependsOn 'publishIosArm64PublicationToMavenRepository'
     dependsOn 'publishIosX64PublicationToMavenRepository'
+    dependsOn 'publishTvosArm64PublicationToMavenRepository'
+    dependsOn 'publishTvosX64PublicationToMavenRepository'
+    dependsOn 'publishWatchosArm32PublicationToMavenRepository'
+    dependsOn 'publishWatchosArm64PublicationToMavenRepository'
+    dependsOn 'publishWatchosX86PublicationToMavenRepository'
     dependsOn 'publishMacosX64PublicationToMavenRepository'
     dependsOn 'publishJvmPublicationToMavenRepository'
     dependsOn 'publishJsPublicationToMavenRepository'
