--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ kotlin.code.style=official
 kotlin.incremental=true
 
 GROUP=com.benasher44
-VERSION=0.2.3
+VERSION=0.2.4
 
 POM_URL=https://github.com/benasher44/uuid/
 POM_SCM_URL=https://github.com/benasher44/uuid/
@@ -18,3 +18,7 @@ POM_DEVELOPER_ID=benasher44
 POM_DEVELOPER_NAME=Ben Asher
 POM_NAME=UUID
 POM_DESCRIPTION=A Kotlin multiplatform implementation of a v4 RFC4122 UUID
+
+
+kotlin.mpp.enableGranularSourceSetsMetadata=true
+kotlin.mpp.enableCompatibilityMetadataVariant=true
