Revert "remove explicit javadocjar"
This reverts commit a8c8ad7b55f75c504b4a9fa92571a22486b10541.

--- a/publish.gradle
+++ b/publish.gradle
@@ -93,6 +93,7 @@ task javadocsJar(type: Jar, dependsOn: dokka) {
 
 publishing {
   publications.all {
+    artifact javadocsJar
 
     pom.withXml {
       def root = asNode()
