--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ POM_DESCRIPTION=A Kotlin multiplatform implementation of a v4 RFC4122 UUID
 
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.mpp.enableCompatibilityMetadataVariant=true
+kotlin.mpp.enableHierarchicalCommonization
