--- a/publish.gradle
+++ b/publish.gradle
@@ -151,12 +151,16 @@ tasks.withType(Sign) {
 tasks.register('publishMac') {
     dependsOn 'publishIosArm32PublicationToMavenRepository'
     dependsOn 'publishIosArm64PublicationToMavenRepository'
+    dependsOn 'publishIosArmSimulator64PublicationToMavenRepository'
     dependsOn 'publishIosX64PublicationToMavenRepository'
     dependsOn 'publishTvosArm64PublicationToMavenRepository'
+    dependsOn 'publishTvosSimulatorArm64PublicationToMavenRepository'
     dependsOn 'publishTvosX64PublicationToMavenRepository'
     dependsOn 'publishWatchosArm32PublicationToMavenRepository'
     dependsOn 'publishWatchosArm64PublicationToMavenRepository'
+    dependsOn 'publishWatchosSimulatorArm64PublicationToMavenRepository'
     dependsOn 'publishWatchosX86PublicationToMavenRepository'
+    dependsOn 'publishMacosArm64PublicationToMavenRepository'
     dependsOn 'publishMacosX64PublicationToMavenRepository'
     dependsOn 'publishJvmPublicationToMavenRepository'
     dependsOn 'publishJsPublicationToMavenRepository'
