Do not try to sign if no signing key is configured

--- a/publish.gradle
+++ b/publish.gradle
@@ -142,10 +142,8 @@ signing {
     sign(publishing.publications)
 }
 
-
-
 tasks.withType(Sign) {
-    onlyIf { isReleaseBuild() }
+    onlyIf { isReleaseBuild() && (System.getenv("SIGNING_KEYID") != null) }
 }
 
 tasks.register('publishMac') {
