--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ POM_DESCRIPTION=A Kotlin multiplatform implementation of a v4 RFC4122 UUID
 
 
 kotlin.mpp.enableCompatibilityMetadataVariant=true
+
+org.gradle.jvmargs=-Xmx4g
