--- a/publish.gradle
+++ b/publish.gradle
@@ -80,7 +80,10 @@ signing {
     def signingKey = System.getenv("SIGNING_KEY")
     def signingPassword = System.getenv("SIGNING_PASSWORD")
     useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
-    sign(publishing.publications)
+}
+
+publishing.publications.configureEach {
+    signing.sign(this)
 }
 
 tasks.withType(Sign) {
