keep 1.9 libs for tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ POM_NAME=UUID
 POM_DESCRIPTION=A Kotlin multiplatform implementation of a v4 RFC4122 UUID
 
 org.gradle.jvmargs=-Xmx4g
+
+kotlin.stdlib.default.dependency=false
